Fix issue sidebar overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,14 +2,16 @@
 
 nav {
   display: flex;
-  justify-content: space-around;
-  height: 50px;
+  justify-content: space-evenly;
+  height: 60px;
   align-items: center;
+  background: rgb(241, 243, 245);
 }
 
 nav .logo {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  letter-spacing: 3px;
+  font-family: 'Modak', cursive;
+  letter-spacing: 2px;
+  color: rgb(55, 65, 75);
 }
 
 nav ul {
@@ -20,13 +22,13 @@ nav ul {
 }
 
 nav ul li a {
-  color: rgb(234, 192, 255);
+  color: rgb(85, 101, 117);
   text-decoration: none;
   font-size: 0.8em;
 }
 
 nav ul li a:hover {
-  color: rgb(87, 74, 80);
+  color: rgb(31, 30, 30);
 }
 
 /* Hamburger Menu */
@@ -53,7 +55,7 @@ nav ul li a:hover {
   display: block;
   width: 28px;
   height: 3px;
-  background-color:  rgb(234, 192, 255);
+  background-color: rgb(85, 101, 117);
   border-radius: 3px;
   transition: all 0.5s;
 }
@@ -90,6 +92,10 @@ nav ul li a:hover {
 }
 
 @media screen and (max-width: 700px) {
+  body {
+    overflow-x: hidden;
+  }
+
   nav ul {
     position: absolute;
     right: 0;
@@ -97,11 +103,10 @@ nav ul li a:hover {
     top: 0;
     height: 100vh;
     align-items: center;
-    background-color: green;
+    background-color: rgb(241, 243, 245);
     justify-content: space-evenly;
     z-index: -1;
     width: 80%;
-    transform: translateX(100%);
     transition: all 1s;
     opacity: 0;
   }
@@ -112,6 +117,5 @@ nav ul li a:hover {
 
   nav ul.slide {
     opacity: 1;
-    transform: translateX(0);
   }
 }
